Autogen: clean target with ninja generator doesn’t clean autogen files
Files generated by CMake’s AUTOMOC are not removed upon the clean target invocation. (also applies to UIC, but that’s not included in the test project. RCC files seem to get cleaned up though)
Tested on Arch with Qt 5.9.1 and CMake 3.8.2.
mkdir build; cd build; cmake -G Ninja ..; cmake --build .; cmake --build . --target clean; find cmake-ninja-autogen-remove_autogen;
cmake-ninja-autogen-remove_autogen
cmake-ninja-autogen-remove_autogen/EWIEGA46WW
cmake-ninja-autogen-remove_autogen/EWIEGA46WW/moc_main.cpp
cmake-ninja-autogen-remove_autogen/include
Edited by Sebastian Holtermann